# imagelib

./: CMakeLists.txt  README  bmp.cpp  image.cpp  image.h  libjpeg-LICENSE  lodepng-LICENSE  main.c  main.cpp  tga.cpp  util.h  zlib-LICENSE
include/: config.h  image.h  image_edit.h  image_hint.h  image_hints.h  image_io.h
src/: CMakeLists.txt  bitmap_font.c  bitmap_font.cpp  bitmap_font.h  image.c  image.cpp  image_edit.c  io.c  util.h
src/export/: ascii.c  ascii.cpp  bmp.c  bmp.cpp  jpg.c  jpg.cpp  pbm.c  png.c  png.cpp  tga.c  tga.cpp
src/import/: ascii.c  ascii.cpp  bmp.c  bmp.cpp  jpg.c  jpg.cpp  pbm.c  png.c  png.cpp  tga.c  tga.cpp
src/jpglib/: CMakeLists.txt  jccoefct.c  jccolor.c  jcmainct.c  jconfig.2.h  jconfig.h  jcsample.c  jctrans.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdmainct.c  jdmerge.c  jdpostct.c  jdsample.c  jmemnobs.c  jquant1.c  jquant2.c
src/libpng/: CMakeLists.txt
src/lodepng/: lodepng.c  lodepng.h
src/zlib/: CMakeLists.txt
test/: CMakeLists.txt  test_edit.c  test_exporters.c  test_loaders.c
test/samples/: feep.pbm  feep_gray.pbm  lenna.txt  lennaRGBRLE.tga  rgb.pbm
